--- a/src/app/donate/donate.component.html
+++ b/src/app/donate/donate.component.html
@@ -4,18 +4,18 @@
     <div class="row">
       <div class="col-xs-12 col-md-5">
         <div class="donate-option">
-          <h2 class="gd-primary">Donate via PayPal:</h2>
+          <h2 class="gd-secondary">Donate via PayPal</h2>
 
-          <h3 class="gd-secondary">
-            <span id="donate_mail"><strong>admin@grepodata.com</strong></span>
+          <h4 class="gd-secondary">
+            <span id="donate_mail">admin@grepodata.com</span>
             <span class="copy-txt" (click)="copyText('donate_mail')"><mat-icon>content_copy</mat-icon></span>
-          </h3>
+          </h4>
           <a class="donate-btn paypal" href="https://paypal.me/grepodata" target="_blank"><img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-mark-monotone-transparent.svg"/>paypal.me/grepodata</a>
           <br/>
           <br/>
         </div>
         <div class="donate-option">
-          <h2 class="gd-primary">Or buy me a coffee:</h2>
+          <h2 class="gd-secondary">Or buy me a coffee</h2>
           <br/>
           <a class="donate-btn coffee" href="https://www.buymeacoffee.com/grepodata" target="_blank">☕ buymeacoffee.com/grepodata</a>
           <br/>
@@ -28,12 +28,12 @@
         <br/>
         <br/>
         <div class="thank-you-container">
-          <h3 class="gd-secondary"><strong>Thank you for supporting our project!</strong></h3>
-          <h4 class="gd-secondary">
-            <br/>Every donation goes towards the server upkeep costs for grepodata.com. Our hosting costs are currently 70€/month. Your contribution is greatly appreciated.
-            <br/>
-            <br/>If you have any questions or remarks, you can <a class="a-link-dialog" (click)="showContactDialog()">contact</a> us at any time.
-          </h4>
+          <h3 class="gd-secondary"><strong>Thank you for supporting GrepoData!</strong></h3>
+          <h5 class="gd-secondary">
+            <br/>Every donation goes towards the server upkeep costs
+            <br/>Our hosting costs are currently <strong>70€/month</strong>
+            <br/>Your contribution is greatly appreciated!
+          </h5>
         </div>
       </div>
     </div>
