--- a/src/app/layout/alert/alert.component.html
+++ b/src/app/layout/alert/alert.component.html
@@ -1,5 +1,5 @@
 <div class="alert {{ type }} {{ alertHidden && 'hidden'}}">
-  <mat-icon class="alert__icon {{ type }} material-icons" color="accent">{{ selectIcon() }}</mat-icon>
+  <mat-icon *ngIf="showIcon" class="alert__icon {{ type }} material-icons" color="accent">{{ selectIcon() }}</mat-icon>
   <div class="alert__message">
     <div class="alert__title {{ type }}" *ngIf="!!title">{{ title }}</div>
     <ng-content></ng-content>
