--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -9,6 +9,11 @@
   }
 }
 
+.unicode-icon {
+  width: 24px !important;
+  margin-right: 8px !important;
+}
+
 .a-menu-item {
   margin: -5px 0 5px !important;
 }
