--- a/src/app/shared/dialogs/index-members/index-members.component.html
+++ b/src/app/shared/dialogs/index-members/index-members.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content style="min-width: 90%; min-height: 70%;">
   <a (click)="dialogRef.close()" class="close"></a>
   <h2 class="gd-secondary" style="margin-top: 0px;" mat-dialog-title>
-    User list for team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">group</mat-icon>&nbsp;{{index.name}}</span>
+    User list for team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: -9px; font-size: 40px; margin-right: 10px;">group</mat-icon>&nbsp;{{index.name}}</span>
   </h2>
   <hr>
 
